# Calibration-of-kinematic-parametrs-and-Extrinsics-of-a-rotating-lidar-in-wheeled-mobile-platforms

./: CMakeLists.txt  README.md  createp.cpp  file_2_vec.cpp  lines.cpp  simulator.cpp  simulator.h  simulator_test.cpp  validate_data.cpp  validate_data_v0.cpp
